--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Portifólio</a></li>
                 <li><a href="#">Experiêcncias</a></li>
             </ul>
-            <button class="bt-nav"><img src="Assets/whatsapp-contato.svg" alt="Logowhatsapp"/>Contate-me agora</button>
+            <button class="bt-nav"><img id="fdp" src="Assets/whatsapp-contato.svg" alt="Logowhatsapp"/>Contate-me agora</button>
         </section>  
        </header>
 
@@ -135,32 +135,30 @@
                             <input type="radio" name="slide" id="c1" checked>
                             <label for="c1" class="card">
                                 <div class="row">
-                                    <div class="icon">1</div>
+                                    <div class="icon">UX</div>
                                     <div class="description">
-                                        <h4>Winter</h4>
-                                        <p>Winter has so much to offer -
-                                         creative activities</p>
+                                        <h4>User experience</h4>
+                                        <p>Encontre meus trabalhos completos</p>
                                     </div>
                                 </div>
                             </label>
                             <input type="radio" name="slide" id="c2" >
                             <label for="c2" class="card">
                                 <div class="row">
-                                    <div class="icon">2</div>
+                                    <div class="icon">DEV</div>
                                     <div class="description">
-                                        <h4>Digital Technology</h4>
-                                        <p>Gets better every day -
-                                         stay tuned</p>
+                                        <h4>Front-end</h4>
+                                        <p>Acesse todos os meus códigos</p>
                                     </div>
                                 </div>
                             </label>
                             <input type="radio" name="slide" id="c3" >
                             <label for="c3" class="card">
                                 <div class="row">
-                                    <div class="icon">3</div>
+                                    <div class="icon">DG</div>
                                     <div class="description">
-                                        <h4>Globalization</h4>
-                                        <p>Help people all over the world</p>
+                                        <h4>Design Gráfico</h4>
+                                        <p>Projetos completos do branding ao vetor final</p>
                                     </div>
                                 </div>
                             </label>
