--- a/index.html
+++ b/index.html
@@ -167,5 +167,91 @@
                 </div>
             </main>
        </section>
+
+       <section class="carrosel-logo">
+            <div class="slider-logo">
+                <div class="slide-track-logo">
+                    <div class="slide-logo">
+                        <img src="Assets/Ai.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Asana.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Corel draw.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/CSS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/EX.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Figma.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Framer.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/HTML.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/JS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Miro.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/PS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/WordPress.png" alt="divisor azul">
+                    </div>
+                </div>
+
+                <div class="slide-track-logo">
+                    <div class="slide-logo">
+                        <img src="Assets/Ai.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Asana.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Corel draw.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/CSS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/EX.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Figma.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Framer.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/HTML.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/JS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/Miro.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/PS.png" alt="divisor azul">
+                    </div>
+                    <div class="slide-logo">
+                        <img src="Assets/WordPress.png" alt="divisor azul">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="experiencia">
+            
+        </section>
     </body>
 </html>
